Revision history for Getopt-Euclid

0.3.x
  - Fixed issue where the NAME section appeared as a VERBATIM section (which podchecker complains about)
  - VERSION section also did not need to be VERBATIM
  - Always convert POD to text when calling help()
  - help() is now paged if IO::Pager::Page is installed
  - Dependency changes:
      Pod::Simple::Text replaces Pod::Text and is required instead of recommended,
      IO::Pager::Page is recommended

0.3.3
  - Attempt to extract POD even from files that look binary (might be packaged
    with pp, perlapp or similar program)

0.3.2
  - Another attempt to make the CPAN indexer happy

0.3.1
  - Changed $VERSION to make the CPAN indexer happy
  - Export repeatable options with multiple placeholders as an empty arrayref,
    not as an empty hashref (RT bug #71165, reported by Bill Levering)

0.3.0
  - Reverted feature to match POD head section =head2, =head3 and =head4 because
    of backward compatibility issue (RT bug #70942)

0.2.9  2011-09-03
  - This command does not generate warnings anymore:
    perl -e 'use Getopt::Euclid; print $Getopt::Euclid::VERSION;'
  - Required and optional arguments can now be put in a POD head section =head2,
    =head3 and =head4 for more flexibility

0.2.8  2011-09-02
  - Support for optional defaults (RT bug #61438, patch from Paolo Medeo)
  - Extended the grammar of recognized POD headers for required and optional arguments:
    [STANDARD|STD|PROGRAM|SCRIPT|CLI|COMMAND[-| ]LINE] [REQUIRED|MANDATORY] [PARAM|PARAMETER|ARG|ARGUMENT][S]
    [STANDARD|STD|PROGRAM|SCRIPT|CLI|COMMAND[-| ]LINE]      OPTION[AL|S]    [PARAM|PARAMETER|ARG|ARGUMENT][S]
  - Usage error message now mentions the --man option in addition to --help

0.2.7
  - Updated dependencies in Build.PL module

0.2.6
  - Bugfix: corrected a .pod file finding issue

0.2.5
  - Bugfix for #69324: more efficient and accurate POD extraction using Perl::Tidy
  - Bugfix for #29301: automatically looking for POD located into .pod files