@@ -21,7 +21,6 @@ my @pods;
 my $minimal_keys;
 my $vars_prefix;
 my $defer;
-my $pod_file;
 my $pod_file_msg = "# This file was automatically generated by Getopt::Euclid. Do not edit it.";
 my $matcher;
 my %requireds_hash;
@@ -100,7 +99,6 @@ sub import {
     @_ = grep { !( /:minimal_keys/     and $minimal_keys = 1             ) } @_;
     @_ = grep { !( /:vars(?:<(\w+)>)?/ and $vars_prefix  = $1 || "ARGV_" ) } @_;
     @_ = grep { !( /:defer/            and $defer        = 1             ) } @_;
-    @_ = grep { !( /:pod_file/         and $pod_file     = 1             ) } @_;
     croak "Unknown mode ('$_')" for @_;
 
     # No POD parsing and argument processing in Perl compile mode (ticket 34195)
@@ -117,6 +115,18 @@ sub import {
 sub man {
     shift @_;
     return $man;
+}
+
+
+sub podfile {
+    # Write the given POD doc into a .pod file, overwriting any existing .pod file
+    return if not -e $0;
+    my ($name, $path, $suffix) = fileparse($0, qr/\.[^.]*/);
+    my $pod_file = catfile( $path, $name.'.pod' );
+    open my $out_fh, '>', $pod_file or croak "Could not write file $pod_file because $!";
+    print $out_fh $pod_file_msg."\n\n".Getopt::Euclid->man();
+    close $out_fh;
+    return $pod_file;
 }
 
 
@@ -151,6 +161,11 @@ sub process_args {
 
     if ( grep { / --man /xms } @$args ) {
         _print_pod( Getopt::Euclid->man(), 'paged' );
+        exit;
+    }
+    elsif ( first { $_ eq '--podfile' } @$args ) {
+        my $podfile = podfile( );
+        print "Wrote manual in file $podfile\n";
         exit;
     }
     elsif ( first { $_ eq '--usage' } @$args ) {
@@ -319,11 +334,7 @@ sub _process_pod {
     # Process POD of caller program
     _process_prog_pod();
 
-    # Create a .pod file if requested
-    _write_pod_file() if $pod_file;
-
     $has_run = 1;
-
     return 1;
 }
 
@@ -1011,35 +1022,6 @@ sub _print_pod {
 }
 
 
-sub _write_pod_file {
-    # Write the POD doc into a .pod file, overwriting any existing .pod file.
-    # If the folder is not writable, assume that the application is deployed
-    # system-wide and that the .pod file does not need to be written because it.
-    # The interest of this .pod file is that default values are automatically
-    # interpolated by Getopt::Euclid.
-
-    return if not -e $0;
-
-    my ($name, $path, $suffix) = fileparse($0, qr/\.[^.]*/);
-    my $pod_file = catfile( $path, $name.'.pod' );
-
-    if ( -w $path ) {
-
-        ####
-        print "Writing POD\n";
-        ####
-
-        # Write .pod file if folder is writable
-        open my $out_fh, '>', $pod_file or croak "Could not write file $pod_file because $!";
-        #_print_pod( Getopt::Euclid->man(), 'paged' );
-        print $out_fh $pod_file_msg."\n\n".Getopt::Euclid->man();
-        close $out_fh;
-    }
-
-    return 1;
-}
-
-
 sub _check_name {
     # Check that the argument name only has pairs of < > brackets (ticket 34199)
     # Return the name of the variables that this argument specifies
@@ -1167,26 +1149,16 @@ sub _get_pod {
             my $first_line = <$in>;
             chomp $first_line;
             if ( not ($first_line eq $pod_file_msg) ) {
-                # Do not use Getopt::Euclid auto-generated .pod file because it
-                # lacks some sections important for parsing CLI arguments
+                # Do not use G::E auto-generated file since it lacks important stuff
                 print $pod_fh $first_line;
                 print $pod_fh $_ while <$in>;    
                 $got_pod = 1;
-
-                ####
-                print ">>> Parsed .pod file\n";
-                ####
             }
             close $in;
         }
         if (not $got_pod) {
             # Parse POD content of Perl file
             podselect( {-output => $pod_fh}, $perl_file );
-
-            ####
-            print ">>> Parsed Perl file\n";
-            ####
-
         }
         print $pod_fh "\n" if $pod_string;
 
@@ -1521,17 +1493,17 @@ the following POD documentation:
 =item =head1 NAME
 
 Getopt::Euclid ignores the name specified here. In fact, if you use the
-standard C<--help>, C<--usage>, C<--man>, or C<--version> arguments (see
-L<Standard arguments>), the module replaces the name specified in this
-POD section with the actual name by which the program was invoked (i.e.
-with C<$0>).
+standard C<--help>, C<--usage>, C<--man>, C<--podfile>, or C<--version>
+arguments (see L<Standard arguments>), the module replaces the name specified
+in this POD section with the actual name by which the program was invoked
+(i.e. with C<$0>).
 
 =item =head1 USAGE
 
 Getopt::Euclid ignores the usage line specified here. If you use the
-standard C<--help>, C<--usage>, or C<--man> arguments, the module
-replaces the usage line specified in this POD section with a usage line
-that reflects the actual interface that the module has constructed.
+standard C<--help>, C<--usage>, C<--man> or C<--podfile> arguments, the
+module replaces the usage line specified in this POD section with a usage
+line that reflects the actual interface that the module has constructed.
 
 =item =head1 VERSION
 
@@ -2229,22 +2201,27 @@ message.
 
 =item --help  help()
 
-The --help argument causes the program to print a longer usage summary (with
-a full list of required and optional arguments) and exit. The
-C<Getopt::Euclid->help()> subroutine provides access to the string of this
-message.
+The --help argument causes the program to take a longer usage summary (with
+a full list of required and optional arguments) provided in POD format by
+C<help()>, convert it to plaintext, display it and exit. The message is paged
+using IO::Pager::Page (or IO::Page) if possible.
 
 =item --man  man()
 
-The --man argument causes the program to print the complete POD documentation
-for the program and exit. The C<Getopt::Euclid->man()> subroutine provides
-access to the string of this message.
+The --man argument causes the program to take the POD documentation for
+the program, provided by C<man()>, convert it to plaintext, display it and
+exit. The message is paged using IO::Pager::Page (or IO::Page) if possible.
 
-For --man, if the standard output stream is connected to a terminal and the
-POD::Text module is available, the POD is formatted before printing. If the
-IO::Page or IO::Pager::Page module is available, the formatted documentation is
-then paged. If standard output is not connected to a terminal or Pod::Text is
-not available, the POD is not formatted.
+=item --podfile  podfile()
+
+The --podfile argument is provided for authors. It causes the program to take
+the POD manual from C<man()>, write it in a .pod file with the same base name
+as the program, display the name of the output file and exit. These actions can
+also be executed by calling the C<podfile()> subroutine.This argument is not
+really a standard argument, but it is useful if the program's POD is to be
+passed to a POD converter because, among other things, any default value
+specified is interpolated and replaced by its value in the .pod file, contrary
+to in the program's .pl file.
 
 =item --version  version()
 
