@@ -17,7 +17,7 @@ use Test::More 'no_plan';
 my $man = <<EOS;
 \=head1 NAME
 
-messages.t - Convert a file to Melkor's .orc format
+std_arguments.t - Convert a file to Melkor's .orc format
 
 \=head1 SYNOPSIS
 
@@ -25,11 +25,11 @@ messages.t - Convert a file to Melkor's .orc format
 
 \=head1 VERSION
 
-This document refers to messages.t version 1.9.4 
+This document refers to std_arguments.t version 1.9.4 
 
 \=head1 USAGE
 
-    messages.t -o= <out_file> -i <file> [options] 
+    std_arguments.t -o= <out_file> -i <file> [options] 
 
 \=head1 REQUIRED ARGUMENTS
 
@@ -114,12 +114,14 @@ and/or modified under the terms of the Perl Artistic License
 EOS
 
 
+my $podfile = "# This file was automatically generated by Getopt::Euclid. Do not edit it.\n\n$man";
+
 my $help = <<EOS;
 \=head1 Usage:
 
-       messages.t -o= <out_file> -i <file> [options]
-       messages.t --help
-       messages.t --version
+       std_arguments.t -o= <out_file> -i <file> [options]
+       std_arguments.t --help
+       std_arguments.t --version
 
 \=head1 Required arguments:
 
@@ -189,13 +191,13 @@ EOS
 
 my $usage = <<EOS;
 Usage:
-       messages.t -o= <out_file> -i <file> [options]
-       messages.t --help
-       messages.t --version
+       std_arguments.t -o= <out_file> -i <file> [options]
+       std_arguments.t --help
+       std_arguments.t --version
 EOS
 
 my $version = <<EOS;
-This is messages.t version 1.9.4
+This is std_arguments.t version 1.9.4
 
 Copyright (c) 2002, Damian Conway. All Rights Reserved.
 This module is free software. It may be used, redistributed
@@ -205,13 +207,24 @@ EOS
 
 
 my $man_test = Getopt::Euclid->man();
-is $man_test, $man     => 'Correct man message';
+is $man_test, $man         => 'Correct man message';
+
+my $file = Getopt::Euclid->podfile();
+ok -e $file                => 'Podfile was created';
+my $podfile_test = '';
+open my $in, '<', $file or die "Could not open file $file\n$!\n";
+while (<$in>) {
+  $podfile_test .= $_;
+}
+close $in;
+is $podfile_test, $podfile => 'Correct podfile content';
+unlink $file;
 
 my $help_test = Getopt::Euclid->help();
-is $help_test, $help    => 'Correct help message';
+is $help_test, $help       => 'Correct help message';
 
 my $usage_test = Getopt::Euclid->usage();
-is $usage_test, $usage   => 'Correct usage message';
+is $usage_test, $usage     => 'Correct usage message';
 
 my $version_test = Getopt::Euclid->version();
 is $version_test, $version => 'Correct version message';
