@@ -1,6 +1,7 @@
 Revision history for Getopt-Euclid
 
 0.3.x
+  - New standard argument --podfile to write the manual in a .pod file
   - Fixed issue where the NAME section appeared as a VERBATIM section (which podchecker complains about)
   - VERSION section also did not need to be VERBATIM
   - Always convert POD to text when calling help()
